@@ -5,3 +5,4 @@
 !game pics/
 !game pics/**
 !test.py
+!game_func.py
